tests/snapshots/render_snapshots__custom_binding_render_snapshot.snap
---
source: tests/render_snapshots.rs
expression: output
---
┌ Herdr Pretty Which — mnemonic training wheels ───────────────────────────────────────────────────┐
│┌ Session ───────────────────────────────────────────────────────────────────────────────────────┐│
││Config fixture/config.toml   Theme terminal   37 assigned · 9 unassigned                        ││
││Search › next tab   Mode ALL   View LIST   Shown 6 / 46 bindings                                ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌ Bindings · List ─────────────────────────────────────────────────────┐┌ Details ───────────────┐│
││Action             Keys                   Hint                Origin  ││Next tab                ││
││Next tab           prefix+n, ctrl+alt+n   Move one tab right/ config  ││                        ││
││Next pane          prefix+tab             Cycle through panes default ││Action  next_tab        ││
││Next agent         —                      Focus next visible  unset   ││Keys    prefix+n,       ││
││New tab            prefix+c               Create a tab in thi default ││ctrl+alt+n              ││
││Previous pane      prefix+shift+tab       Cycle backward thro default ││Default prefix+n        ││
││Rename tab         prefix+shift+t         Give the focused ta default ││                        ││
││                                                                      ││Move one tab            ││
││                                                                      │└────────────────────────┘│
││                                                                      │┌ Categories ────────────┐│
││                                                                      ││Core        5           ││
││                                                                      ││Workspaces 13           ││
││                                                                      ││Tabs        6           ││
││                                                                      ││Panes      19           ││
││                                                                      ││Agents      3           ││
│└──────────────────────────────────────────────────────────────────────┘└────────────────────────┘│
│┌ Muscle memory ─────────────────────────────────────────────────────────────────────────────────┐│
││↑/↓ move   type filter   backspace edit   tab/shift-tab mode   ctrl+t view   ←/→ tree   esc/q cl││
││Tip: learn Herdr's native map first; direct chords are optional seasoning, not the main course. ││
││                                                                                                ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
