tests/snapshots/render_snapshots__default_render_snapshot.snap
---
source: tests/render_snapshots.rs
expression: output
---
┌ Herdr Pretty Which — mnemonic training wheels ───────────────────────────────────────────────────┐
│┌ Session ───────────────────────────────────────────────────────────────────────────────────────┐│
││Config fixture/config.toml   Theme terminal   38 assigned · 9 unassigned                        ││
││Search › type to fuzzy-filter   Mode ALL   View TREE   Shown 47 / 47 bindings                   ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌ Bindings · Tree ─────────────────────────────────────────────────────┐┌ Details ───────────────┐│
││▾ Session                                                             ││Session                 ││
││  ▾ Core                                                              ││                        ││
││    • Help  prefix+?  default                                         ││Type    group           ││
││    • Settings  prefix+s  default                                     ││Path    Session         ││
││    • Detach  prefix+q  default                                       ││State   expanded        ││
││    • Reload config  prefix+shift+r  default                          ││                        ││
││    • Open notification  prefix+o  default                            ││Use ←/→ to collapse,    ││
││    • Remote image paste  ctrl+v  default                             ││expand, or enter the    ││
││▾ Workspaces                                                          │└────────────────────────┘│
││  ▾ Picker                                                            │┌ Categories ────────────┐│
││    • Workspace picker  prefix+w  default                             ││Core        6           ││
││    • Goto  prefix+g  default                                         ││Workspaces 13           ││
││  ▾ Lifecycle                                                         ││Tabs        6           ││
││    • New workspace  prefix+shift+n  default                          ││Panes      19           ││
││  ▾ Worktrees                                                         ││Agents      3           ││
│└──────────────────────────────────────────────────────────────────────┘└────────────────────────┘│
│┌ Muscle memory ─────────────────────────────────────────────────────────────────────────────────┐│
││↑/↓ move   type filter   backspace edit   tab/shift-tab mode   ctrl+t view   ←/→ tree   esc/q cl││
││Tip: learn Herdr's native map first; direct chords are optional seasoning, not the main course. ││
││                                                                                                ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
