tests/snapshots/render_snapshots__filtered_render_snapshot.snap
---
source: tests/render_snapshots.rs
expression: output
---
┌ Herdr Pretty Which — mnemonic training wheels ───────────────────────────────────────────────────┐
│┌ Session ───────────────────────────────────────────────────────────────────────────────────────┐│
││Config fixture/config.toml   Theme terminal   37 assigned · 9 unassigned                        ││
││Search › split   Mode ALL   View TREE   Shown 5 / 46 bindings                                   ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌ Bindings · Tree ─────────────────────────────────────────────────────┐┌ Details ───────────────┐│
││▾ Panes                                                               ││Previous pane           ││
││  ▾ Focus                                                             ││                        ││
││    • Previous pane  prefix+shift+tab  default  match                 ││Action                  ││
││  ▾ Layout                                                            ││cycle_pane_previous     ││
││    • Split vertical  prefix+v  default  match                        ││Keys    prefix+shift+tab││
││    • Split horizontal  prefix+minus  default  match                  ││Default prefix+shift+tab││
││▾ Workspaces                                                          ││                        ││
││  ▾ Navigation                                                        ││Cycle backward through  ││
││    • Navigate workspace up  up  default  match                       │└────────────────────────┘│
││    • Navigate workspace down  down  default  match                   │┌ Categories ────────────┐│
││                                                                      ││Core        5           ││
││                                                                      ││Workspaces 13           ││
││                                                                      ││Tabs        6           ││
││                                                                      ││Panes      19           ││
││                                                                      ││Agents      3           ││
│└──────────────────────────────────────────────────────────────────────┘└────────────────────────┘│
│┌ Muscle memory ─────────────────────────────────────────────────────────────────────────────────┐│
││↑/↓ move   type filter   backspace edit   tab/shift-tab mode   ctrl+t view   ←/→ tree   esc/q cl││
││Tip: learn Herdr's native map first; direct chords are optional seasoning, not the main course. ││
││                                                                                                ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
